--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.anicodebreaker.dbms_project">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +21,8 @@
         <activity android:name=".ProjMain" />
         <activity android:name=".CreateAct" />
         <activity android:name=".UpdateAct" />
-        <activity android:name=".ViewAct"></activity>
+        <activity android:name=".ViewAct" />
+        <activity android:name=".customerAll"></activity>
     </application>
 
 </manifest>
