Branch Details Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".createCust" />
         <activity android:name=".Login" />
         <activity android:name=".Accounts" />
-        <activity android:name=".Loans"></activity>
+        <activity android:name=".Loans" />
+        <activity android:name=".BranchDetails"></activity>
     </application>
 
 </manifest>
